--- a/index.css
+++ b/index.css
@@ -13,7 +13,8 @@ h2 {
 
 #mainbody {
     margin: auto;
-    padding: 50px;
+    padding-left:10%;
+    padding-right:10%;
     /* text-align: center; */
     width: 70%;
     /* color: #50aaf2; */
@@ -22,6 +23,10 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #b3d4f5;
     border-radius: 10px;
+}
+
+#aboutme-div {
+    width: auto;
 }
 
 #main-name {
